feat: image types, caching
